src-ken&y/objects/Shipment__c.object
<CustomObject>
    <customHelpPage>HelpShipment</customHelpPage>
    <description>Sales Order Shipment Header</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Carrier delivering the shipment.</description>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Shipment Currency</relationshipLabel>
        <relationshipName>Shipment_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shipt To Customer</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <description>Date when this shipment is shipped</description>
        <label>Date Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dimensional_Weight__c</fullName>
        <inlineHelpText>Based on the cubic space that the goods occupy. The system verifies that the dimensional weight of a product is within the min/max limits specified on the related Means of Transport. The dimensional weight is also used to drive sales order aggregation.</inlineHelpText>
        <label>Dimensional Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Shipment_Date__c</fullName>
        <description>The earliest date on which the shipment can be shipped for delivery to the customer.</description>
        <inlineHelpText>This date is driven by the Earliest Delivery Window (see Customer record) and the Required Date (on the Sales Order).</inlineHelpText>
        <label>Earliest Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date__c</fullName>
        <description>The estimated date on which the shipment will be delivered to the destination.</description>
        <inlineHelpText>This date is driven by the Required Date (see Sales Order) and the Estimated Ship Date. The estimated delivery date populates the delivery date.</inlineHelpText>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finalized flag is set to true when the shipment record is ready for Accounting and no further changes are expected</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Forwarder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Freight Forwarder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>Indicates that there are issues to be resolved related to this shipment and may not be processed any further until then.</description>
        <formula>OR(
Exceptions_Count__c &gt; 0,
Line_Exceptions__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Shipment_Date__c</fullName>
        <description>The latest date by which the shipment can be shipped for delivery to the customer.</description>
        <inlineHelpText>This date is driven by the Latest Delivery Window (Customer record) and the Required Date (Sales Order).</inlineHelpText>
        <label>Latest Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <label>Line Exceptions</label>
        <summaryFilterItems>
            <field>Shipment_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the locked field is checked the users are not allowed to make changes.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Dimensional_Percent__c</fullName>
        <formula>IF (ISBLANK (Means_of_Transport__c), null, 
	MAX ( 
		IF ( OR(ISBLANK(Means_of_Transport__r.Maximum_Cube__c), ISNULL(Means_of_Transport__r.Maximum_Cube__c), Means_of_Transport__r.Maximum_Cube__c=0), 0, Total_Product_Volume_Planned__c / Means_of_Transport__r.Maximum_Cube__c), 
		IF ( OR(ISBLANK(Means_of_Transport__r.Maximum_Weight__c), ISNULL(Means_of_Transport__r.Maximum_Weight__c), Means_of_Transport__r.Maximum_Weight__c=0), 0, Total_Weight_Planned__c / Means_of_Transport__r.Maximum_Weight__c), 
		IF ( OR(ISBLANK(Means_of_Transport__r.Pallet_Positions_double_stacked__c), ISNULL(Means_of_Transport__r.Pallet_Positions_double_stacked__c), Means_of_Transport__r.Pallet_Positions_double_stacked__c=0), 0, CEILING(Number_of_Pallets_Planned__c) / (Means_of_Transport__r.Pallet_Positions_double_stacked__c)) 
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Dimensional %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Means_of_Transport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The means of transport by which the shipment will be delivered.</description>
        <inlineHelpText>Indicates the transport used to ship the goods. The Means of Transport record includes the weight and volume limitations as well as pallet positions available.</inlineHelpText>
        <label>Means of Transport</label>
        <referenceTo>Means_of_Transport__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Movement_Number__c</fullName>
        <label>Load Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Pallets_Planned__c</fullName>
        <inlineHelpText>Total number of pallets you plan to use to ship the goods. When you ship the goods, you can record the actual number shipped.</inlineHelpText>
        <label>Number of Pallets Planned</label>
        <summarizedField>Shipment_Line__c.Number_of_Pallets_Planned__c</summarizedField>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Delivery_Date__c</fullName>
        <description>The date on which the shipment is planned to be delivered to the customer.</description>
        <inlineHelpText>Date on which the shipment is planned to be delivered to the customer. The date is determined by the FOB term (pickup or delivery), which is specified on the sales order.</inlineHelpText>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Automation considers records which have Ready == true</description>
        <inlineHelpText>A check mark indicates that the shipment is ready for processing by the Shipment Accounting process (batch) job.</inlineHelpText>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_From_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From Bin</label>
        <referenceTo>Bin__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_From_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The facility from which the shipment will be shipped.</description>
        <inlineHelpText>The facility from which the shipment will be shipped.</inlineHelpText>
        <label>Ship From Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location from which the shipment will be shipped.</description>
        <inlineHelpText>The location from which the shipment will be shipped.</inlineHelpText>
        <label>Ship From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship-to City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>Ship-to Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship-to State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Street__c</fullName>
        <label>Ship-to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip_Code__c</fullName>
        <label>Ship-to Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Date_Estimated__c</fullName>
        <inlineHelpText>This date is driven by the Required Date (see Sales Order) and the Earliest Shipment Date.</inlineHelpText>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Method</label>
        <referenceTo>Shipping_Method__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Staged</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Lines__c</fullName>
        <description>Total number of lines.</description>
        <inlineHelpText>Total number of lines.</inlineHelpText>
        <label>Total Number Of Lines</label>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pallet_Weight_Planned__c</fullName>
        <description>Weight of the Planned Pallets</description>
        <formula>Customer__r.Pallet_Product__r.Item__r.Weight__c  *  CEILING( Number_of_Pallets_Planned__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weight of all planned pallets.</inlineHelpText>
        <label>Total Pallet Weight Planned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Weight__c</fullName>
        <description>Roll up of planned total weights for each Shipment line.</description>
        <inlineHelpText>The sum of the  weight from all shipment lines. Planned weight is pulled from the Sales Order. The total shipment weight can be calculated when the pallet requirements are received.</inlineHelpText>
        <label>Total Planned Weight</label>
        <summarizedField>Shipment_Line__c.Planned_Weight__c</summarizedField>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Product_Volume_Planned__c</fullName>
        <label>Total Product Volume Planned</label>
        <summarizedField>Shipment_Line__c.Planned_Product_Volume__c</summarizedField>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Product_Weight__c</fullName>
        <inlineHelpText>The weight of the product without pallets. After the pallet requirements have been received,  the total shipment weight can be calculated.</inlineHelpText>
        <label>Total Product Weight</label>
        <summarizedField>Shipment_Line__c.Product_Weight__c</summarizedField>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Shipment_Weight__c</fullName>
        <inlineHelpText>The weight of the shipment, including pallets.</inlineHelpText>
        <label>Total Shipment Weight</label>
        <summarizedField>Shipment_Line__c.Total_Weight__c</summarizedField>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weight_Planned__c</fullName>
        <description>Weight of the Shipment ( including Pallets )</description>
        <formula>Total_Pallet_Weight_Planned__c  +  Total_Product_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total weight of the shipment including pallets. The weight calculation uses the estimated number of pallets.</inlineHelpText>
        <label>Total Weight Planned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_ID__c</fullName>
        <description>Carrier Tracking ID</description>
        <label>Tracking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency of this shipment</description>
        <inlineHelpText>The currency used for the shipment. Options include CAD, EUR, GBP, USD. To manage the default transaction currency go to the Company page.</inlineHelpText>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <inlineHelpText>Date and time of the shipment. This field determines the transaction date for accounting purposes.</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Logical Sales Order Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Determines whether the shipment is used to fulfill a sales order or a transfer order.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Out_Of_Range__c</fullName>
        <formula>IF(
Customer__r.Aggregate_Shipments__c,  
IF(Means_of_Transport__r.Maximum_Weight__c &gt; 0, 
   Total_Weight_Planned__c  &gt;  Means_of_Transport__r.Maximum_Weight__c, 
   false
),
false)</formula>
        <label>Weight Out Of Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit Of Measure of the Total Weight.</description>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Shipped__c</columns>
        <columns>Customer__c</columns>
        <columns>Company__c</columns>
        <columns>Tracking_ID__c</columns>
        <columns>Shipment_Date_Estimated__c</columns>
        <columns>Status__c</columns>
        <columns>Finalized__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cancelled_not_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp; Finalized__c</errorConditionFormula>
        <errorMessage>You cannot Finalize a Shipment that has been cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Type_Transaction_Type</fullName>
        <active>true</active>
        <description>Shipment type and transaction type cannot be changed</description>
        <errorConditionFormula>(NOT(ISNEW())
&amp;&amp;
ISCHANGED(Type__c)
&amp;&amp;
NOT(ISBLANK(PRIORVALUE(Type__c)))
||
NOT(ISNEW())
&amp;&amp;
ISCHANGED(Transaction_Type__c)
&amp;&amp;
NOT(ISBLANK(PRIORVALUE(Transaction_Type__c)))
)</errorConditionFormula>
        <errorMessage>Shipment type and  transaction type cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Customer_Field</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Customer__c )</errorConditionFormula>
        <errorMessage>Customer cannot be changed for a shipment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Shipment_Ship_To_Address_fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Ship_to_Street__c ) || ISCHANGED( Ship_to_City__c ) || ISCHANGED( Ship_to_State__c ) || ISCHANGED( Ship_to_Country__c ) || ISCHANGED( Ship_to_Zip_Code__c )</errorConditionFormula>
        <errorMessage>Ship-To Address fields cannot be modified</errorMessage>
    </validationRules>
</CustomObject>